# ds1820

./: .travis.yml  CMakeLists.txt  README.md  config.json  temperature-server.c
action/: action.c  action.h
dts/: BB-W1-00A0.dts
map/: map_lib.c  map_lib.h
sqlite/: temp.c  temp.h
static/: index.html  settings.html
static/css/: jquerymobile.nativedroid.css  jquerymobile.nativedroid.css~
static/js/: custom.js  customForms.js
util/: util.c  util.h
